fix(common): api market collapse and side-navigation style bug

--- a/shell/app/layout/pages/page-container/components/sidebar.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar.scss
@@ -59,3 +59,7 @@
   transform: scale(0.9) translate(50%, -50%);
   padding: 0 6px;
 }
+
+.side-nav-menu .menu-container .ant-menu-inline-collapsed {
+  width: 50px;
+}
