--- a/shell/app/modules/apiManagePlatform/pages/api-market/detail/components/api-menu.scss
+++ b/shell/app/modules/apiManagePlatform/pages/api-market/detail/components/api-menu.scss
@@ -6,7 +6,7 @@
 
 .api-group-list {
   &-item {
-    .ant-collapse-content-box {
+    .ant-collapse-content .ant-collapse-content-box {
       padding: 0;
     }
   }
